force-app/main/default/objects/Study_Program_Admission_Path__c/Study_Program_Admission_Path__c.object-meta.xml
<CustomObject>
    <description>The supported admission path for a study program.</description>
    <label>Study Program Admission Path</label>
    <nameField>
        <label>Study Program Admission Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Program Admission Path</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>