force-app/main/default/objects/Study_Program_Admission_Path__c/fields/Admission_Path__c.field-meta.xml
<CustomField>
    <fullName>Admission_Path__c</fullName>
    <label>Admission Path</label>
    <referenceTo>Admission_Path__c</referenceTo>
    <relationshipLabel>Study Program Admission Path</relationshipLabel>
    <relationshipName>Study_Program_Admission_Path</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>