force-app/main/default/objects/Study_Program_Admission_Path__c/fields/Secondary_Study_Plan__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Study_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Study Plan</label>
    <referenceTo>Study_Plan__c</referenceTo>
    <relationshipLabel>Study Program Admission Path (Secondary Plan)</relationshipLabel>
    <relationshipName>Study_Program_Admission_Path_SecondPlan</relationshipName>
    <type>Lookup</type>
</CustomField>