force-app/main/default/objects/Study_Program_Admission_Path__c/fields/Study_Program__c.field-meta.xml
<CustomField>
    <fullName>Study_Program__c</fullName>
    <label>Study Program</label>
    <referenceTo>Study_Program__c</referenceTo>
    <relationshipLabel>Study Program Admission Path</relationshipLabel>
    <relationshipName>Study_Program_Admission_Path</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>